refactor: 优化实体映射逻辑